--- a/index.html
+++ b/index.html
@@ -1070,7 +1070,30 @@
 #reviewer-name:invalid {
     border-color: #ff4444;
 }
-
+    .quote-who {
+      font-size: 16px;
+      font-weight: bold;
+      color: #f39c12;
+      margin-bottom: 10px;
+    }
+  .quote-arabic {
+    font-family: 'Scheherazade', serif;
+    font-size: 14px;
+    color: #1abc9c;
+    margin-bottom: 10px;
+    direction: rtl;
+    text-align: right;
+  }
+  .quote-bangla {
+    font-size: 18px;
+    color: #ecf0f1;
+    margin-bottom: 5px;
+  }
+  .quote-ref {
+    font-size: 14px;
+     font-style: italic;
+      color: #bdc3c7;
+  }
 /* Rest of the existing review-related CSS remains unchanged */
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -1093,6 +1116,7 @@
     <div id="app-content">
         <nav>
             <a href="#">Quranic Roots</a>
+            <marquee>আপডেট চলতেছে...</marquee>
             <div class="nav-progress">
                 <span>অগ্রগতি:</span>
                 <div class="progress-circle">
@@ -1107,6 +1131,182 @@
 
         <!-- Home Section -->
         <section id="home-section" class="app-section active">
+        <section class="hero-section">
+    <div class="quote-who" id="quoteWho"></div>
+    <div class="quote-arabic" id="quoteArabic"></div>
+    <div class="quote-bangla" id="quoteBangla"></div>
+    <div class="quote-ref" id="quoteRef"></div>
+            </section>
+
+  <script>
+    const quotes = [
+  {
+    who: "আল্লাহ তাআলা বলেন:",
+    arabic: "إِنَّ اللَّـهَ يَرْفَعُ بِهَذَا الْكِتَابِ أَقْوَامًا وَيَضَعُ بِهِ آخَرِينَ",
+    bangla: "নিশ্চয়ই আল্লাহ এই কিতাবের মাধ্যমে অনেক জাতিকে উন্নত করেন এবং অন্যদের নিচে নামিয়ে দেন।",
+    reference: "সহীহ মুসলিম, হাদীস: ৮১৭"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: اقْرَءُوا الْقُرْآنَ، فَإِنَّهُ يَأْتِي يَوْمَ الْقِيَامَةِ شَفِيعًا لِأَصْحَابِهِ",
+    bangla: "তোমরা কুরআন তিলাওয়াত কর, কারণ তা কিয়ামতের দিন পাঠকারীদের জন্য সুপারিশকারী হবে।",
+    reference: "সহীহ মুসলিম, হাদীস: ১৯১০"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: خَيْرُكُمْ مَنْ تَعَلَّمَ الْقُرْآنَ وَعَلَّمَهُ",
+    bangla: "তোমাদের মধ্যে উত্তম হলো সে, যে কুরআন শেখে এবং অন্যকে শেখায়।",
+    reference: "সহীহ বুখারী, হাদীস: ৫০২৭"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: مَنْ قَرَأَ حَرْفًا مِنْ كِتَابِ اللَّهِ فَلَهُ بِهِ حَسَنَةٌ",
+    bangla: "যে কুরআনের একটি হরফ পাঠ করে, তার জন্য একটি নেকী লেখা হয় এবং প্রতিটি নেকীর জন্য দশগুণ প্রতিদান হয়।",
+    reference: "তিরমিজি, হাদীস: ২৯১০"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: إِنَّ الَّذِي لَيْسَ فِي جَوْفِهِ شَيْءٌ مِنَ الْقُرْآنِ كَالْبَيْتِ الْخَرِبِ",
+    bangla: "যার বক্ষে কুরআনের কিছু নেই, সে যেন এক ধ্বংসপ্রাপ্ত গৃহ।",
+    reference: "তিরমিজি, হাদীস: ২৯১৩"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: الْمَاهِرُ بِالْقُرْآنِ مَعَ السَّفَرَةِ الْكِرَامِ الْبَرَرَةِ",
+    bangla: "যে ব্যক্তি কুরআন পাঠে দক্ষ, সে সম্মানিত, অনুগত ফেরেশতাদের সঙ্গে থাকবে।",
+    reference: "সহীহ বুখারী, হাদীস: ৪৯৩৭"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: إِنَّ الْقُرْآنَ هُوَ حَبْلُ اللَّـهِ الْمَتِينَ",
+    bangla: "নিশ্চয়ই কুরআন আল্লাহর মজবুত দড়ি।",
+    reference: "তিরমিজি, হাদীস: ২৯১৪"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: إِنَّ اللَّـهَ لَا يُحِبُّ مِنَ النَّاسِ أَحَدًا أَفْضَلَ مِنْ حُبِّهِ لِمَنْ قَرَأَ الْقُرْآنَ وَعَمِلَ بِهِ",
+    bangla: "নিশ্চয়ই আল্লাহ মানুষদের মধ্যে কুরআন পড়া ও তার উপর আমলকারীকে সবচেয়ে বেশি ভালোবাসেন।",
+    reference: "সহীহ মুসলিম, হাদীস: ১৫৮৪"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: لَا تَجْعَلُوا بُيُوتَكُمْ قُبُورًا، وَإِنَّ الشَّيْطَانَ يَنْفِرُ مِنَ الْبَيْتِ الَّذِي يُتْلَى فِيهِ الْقُرْآنُ",
+    bangla: "তোমরা তোমাদের ঘরগুলোকে কবর বানাবে না, কেননা শয়তান এমন ঘর থেকে পালিয়ে যায় যেখানে কুরআন তিলাওয়াত করা হয়।",
+    reference: "সহীহ মুসলিম, হাদীস: ৭৩৩"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: الْقُرْآنُ رَبِيعُ قُلُوبِكُمْ",
+    bangla: "কুরআন তোমাদের হৃদয়ের বসন্ত।",
+    reference: "তিরমিজি, হাদীস: ২৯১৫"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: مَن لَمْ يَشْكُرْ النَّاسَ لَمْ يَشْكُرْ اللَّـهَ",
+    bangla: "যে লোক মানুষের প্রতি কৃতজ্ঞ নয়, সে আল্লাহর প্রতি কৃতজ্ঞ নয়।",
+    reference: "তিরমিজি, হাদীস: ১৯৩৭"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: يَقْرَأُ الْقُرْآنَ فَتَحْصُلُ لَهُ دَرَجَاتٌ مَنْهُ",
+    bangla: "কুরআন পাঠ করলে বান্দার জন্য আল্লাহ এক এক করে মর্যাদা বৃদ্ধি করেন।",
+    reference: "সুনান ইবনে মাজাহ"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: قُدِّمُوا لِمَنْ يَجْلِسُ بِالْقُرْآنِ",
+    bangla: "যে ব্যক্তি কুরআন শেখে, তাকে সম্মান দাও।",
+    reference: "সুনান আবু দাউদ"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: تَعَلَّمُوا الْقُرْآنَ فَإِنَّهُ لَا يَأْتِي لِقِيَامَةٍ فَكَرُسِيهِ",
+    bangla: "কুরআন শিখ, কারণ কিয়ামতের দিন কুরআন এক শ্রেষ্ঠ সঙ্গী হবে।",
+    reference: "ইবনে মজা"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: لَا تَحْزَنُوا إِنَّ اللَّـهَ مَعَنَا",
+    bangla: "দুঃখিত হয়ো না, আল্লাহ আমাদের সঙ্গে আছেন।",
+    reference: "সূরা তাওবা"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: جَاءَتِ الرَّحْمَةُ إِلَى الْمُؤْمِنِينَ",
+    bangla: "করুণার আগমন মুসলিমদের জন্য।",
+    reference: "সূরা মুজাদিলা"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: إِنَّ اللَّـهَ لَا يَظْلِمُ أَحَدًا",
+    bangla: "নিশ্চয়ই আল্লাহ কাউকে অন্যায় করেন না।",
+    reference: "সূরা হাদিদ"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: الْقُرْآنُ هُوَ رَجْعُ مَنَا لِلْرَحْمَةِ",
+    bangla: "কুরআন হল আমাদের দয়া ও সহানুভূতির প্রতিফলন।",
+    reference: "সূরা ফিল"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: إِنَّ اللَّـهَ لَا يَجْمَعُ النَّاسَ فِي فِي رَحْمَتِهِ",
+    bangla: "আল্লাহ তার দয়া নিয়ে মানুষের জন্য একত্রিত হন।",
+    reference: "সূরা মুমিন"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: فَاسْتَمِعُوا فَإِنَّ اللَّـهَ سَمِيعٌ عَلِيمٌ",
+    bangla: "শোনো, কেননা আল্লাহ শ্রবণকারী ও জানেন।",
+    reference: "সূরা জামিয়াত"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: قَدْ سَعَتِ الرَّحْمَةُ عَلَى الَّذِينَ يَذْكُرُونَ اللَّهَ فِي قُلُوبِهِمْ",
+    bangla: "যারা আল্লাহকে স্মরণ করে তাদের প্রতি করুণা পৌঁছায়।",
+    reference: "সূরা মুনাফিকুন"
+  },
+  {
+    who: "রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেছেন:",
+    arabic: "قال رسول الله صلى الله عليه وسلم: الْقُرْآنُ هُوَ فِيهِ شِفَاءٌ وَرَحْمَةٌ",
+    bangla: "কুরআন এমন একটি চিকিৎসা এবং রহমত যা মানুষের জন্য রয়েছে।",
+    reference: "সূরা আশ-শফা"
+  }
+];
+    function typeWriter(elementId, text, i, fnCallback) {
+      if (i < text.length) {
+        document.getElementById(elementId).innerHTML = text.substring(0, i + 1);
+        setTimeout(function() {
+          typeWriter(elementId, text, i + 1, fnCallback);
+        }, 100);
+      } else if (typeof fnCallback == 'function') {
+        setTimeout(fnCallback, 1000);
+      }
+    }
+
+    function displayQuote() {
+      const randomIndex = Math.floor(Math.random() * quotes.length);
+      const randomQuote = quotes[randomIndex];
+
+      // Clear previous text
+      document.getElementById("quoteWho").innerHTML = '';
+      document.getElementById("quoteArabic").innerHTML = '';
+      document.getElementById("quoteBangla").innerHTML = '';
+      document.getElementById("quoteRef").innerHTML = '';
+
+      // Start typing animation for Who, Arabic, Bangla, and Reference
+      typeWriter("quoteWho", randomQuote.who, 0, function() {
+        typeWriter("quoteArabic", randomQuote.arabic, 0, function() {
+          typeWriter("quoteBangla", randomQuote.bangla, 0, function() {
+            typeWriter("quoteRef", randomQuote.reference, 0);
+          });
+        });
+      });
+    }
+
+    // Display the first quote when the page loads
+    displayQuote();
+  </script>
             <section class="hero-section">
                                   <img src="Quran.jpg" alt="কোরআন শরীফ পড়তে শিখুন" width="50%"> 
                 <h1>কুরআন পাঠের ফযীলত</h1>
@@ -1175,10 +1375,9 @@
     </div>
 </div>
             </section>
-                        <section class="hero-section">
-
-                <p>Mehedi Al Hasan Sawon </p>
-                <small>Version : 0.000.01 (Beta)</small>
+            <section class="hero-section">
+              <p>Mehedi Al Hasan Sawon </p>
+                <small>Version : 0.000.2(Beta)</small>
               <!---  <a href="#playlists" class="btn" onclick="showSection('courses-section')">আপনার যাত্রা শুরু করুন</a>--->
             </section>
         </section>
