--- a/index.html
+++ b/index.html
@@ -1321,9 +1321,10 @@
                     <div class="course-info">
                         <h5>কোরআন শরীফ পড়তে শিখুন</h5>
                         <p>অল্প সময়ে 
-সহজ উপায়ে </p>
+সহজ উপায়ে  <br> ৪০টি পর্বে ক্লাসগুলো সাজানো হয়েছে। ক্লাসগুলো আপডেটের কাজ চলতেছে...
+</p>
                         <div class="course-stats">
-                            <span><i class="fas fa-book-open"></i> ১২টি পর্ব</span>
+                            <span><i class="fas fa-book-open"></i> ৪০টি পর্ব</span>
                             <span><i class="fas fa-clock"></i> ৬ ঘণ্টা</span>
                         </div>
                         <div class="course-progress">
